tilt/vre-panel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vreapp-deployment
  labels:
    app: vreapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vreapp
  template:
    metadata:
      labels:
        app: vreapp
    spec:
      containers:
        - name: vreapp
          image: qcdis/vreapp
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
            protocol: TCP
          volumeMounts:
          - mountPath: /app/.env
            name: env
            readOnly: true
            subPath: .env

      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: .env
            path: .env
          name: env
        name: env
---

apiVersion: v1
kind: Service
metadata:
  name: vreapp-svc
  labels:
    app: vreapp-svc
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: vreapp
  type: ClusterIP
