tilt/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vre-paas-ingress
  annotations:
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/proxy-body-size: 600m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/client-max-body-size: 600m
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /vre-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vreapi-svc
                port:
                  number: 8000
